--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GETTING STARTED WITH BRACKETS</title>
-
+    <title>BOTMICOL</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="./images/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./images/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./images/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./images/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./images/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./images/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./images/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./images/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./images/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--<link rel="stylesheet" href="./css/bootstrap.min.css">-->
     <link rel="stylesheet" href="./css/main.css">
@@ -13,17 +29,24 @@
 
 <body>
 
+    <div class="big-title">
+        <p>CROWDSOURCING</p>
+    </div>
     <div class="title">
-        <h1>CROWDSOURCING - QUESTION AND ANSWER</h1>
+        <p>QUESTION AND ANSWER</p>
+    </div>
+    <div class="icon">
+        <img src="images/icon.png">
     </div>
     <div class="subtitle">
-        <h2>Help us collecting data!</h2>
+        <p>Help us collecting data!</p>
     </div>
     <div class="text_corpus">
         <p>
-            blablablabla
+       
         </p>
     </div>
+    
 
     <div id="fb-root"></div>
     <div class="fb-customerchat" attribution=setup_tool page_id="336760520259323" theme_color="#d36e70"></div>
