--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="fb-customerchat" attribution=setup_tool page_id="336760520259323" theme_color="#d36e70"></div>
 
     <script src="./js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+    <!--<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>-->
     <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script>
     <script src="./js/index.js"></script>
 
