--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         <a href="#">HOME - CROWDSOURCING</a>
                     </li>-->
 
-                    <li class="menu-nav active" id="qea">
-                        <a href="index.html">QUESTION AND ANSWER</a>
+                    <li class="menu-nav active" id="qea_menu">
+                        <a href="#">QUESTION AND ANSWER</a>
                     </li>
-                    <li class=menu-nav id="chitchat">
+                    <li class=menu-nav id="chitchat_menu">
                         <a href="#">CHITCHAT</a>
                     </li>
                 </ul>
@@ -62,30 +62,54 @@
                         <img src="./images/icon.png" style="display: flex; width:25px;height:25px">
 
                     </button>
-                 
+
                 </nav>
+                <div id="qea">
+                    <div class="big-title">
+                        <p>CROWDSOURCING</p>
+                    </div>
+                    <div class="title">
+                        <p>QUESTION AND ANSWER</p>
+                    </div>
+                    <div class="icon">
+                        <img src="images/icon.png">
+                    </div>
+                    <div class="subtitle">
+                        <p>Help us collecting data!</p>
+                    </div>
+                    <div class="text_corpus">
+                        <p>
 
-                <div class="big-title">
-                    <p>CROWDSOURCING</p>
-                </div>
-                <div class="title">
-                    <p>QUESTION AND ANSWER</p>
-                </div>
-                <div class="icon">
-                    <img src="images/icon.png">
-                </div>
-                <div class="subtitle">
-                    <p>Help us collecting data!</p>
-                </div>
-                <div class="text_corpus">
-                    <p>
-
-                    </p>
-                </div>
+                        </p>
+                    </div>
 
 
-                <div id="fb-root"></div>
-                <div class="fb-customerchat" attribution=setup_tool page_id="336760520259323" theme_color="#d36e70"></div>
+                    <div id="fb-root"></div>
+                    <div class="fb-customerchat" attribution=setup_tool page_id="336760520259323" theme_color="#d36e70"></div>
+                </div>
+                <div id="chitchat">
+                    <div class="big-title">
+                        <p>CROWDSOURCING</p>
+                    </div>
+                    <div class="title">
+                        <p>CHITCHAT</p>
+                    </div>
+                    <div class="icon">
+                        <img src="images/icon.png">
+                    </div>
+                    <div class="subtitle">
+                        <p>Help us collecting data!</p>
+                    </div>
+                    <div class="text_corpus">
+                        <p>
+
+                        </p>
+                    </div>
+
+
+                    <div id="fb-root"></div>
+                    <div class="fb-customerchat" attribution=setup_tool page_id="336760520259323" theme_color="#d36e70"></div>
+                </div>
             </div>
             <script src="./js/jquery-3.3.1.min.js"></script>
             <!--<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>-->
